Optimize web.config: Robust OPTIONS handler, remove handlers section, PassThrough errors

--- a/web.config
+++ b/web.config
@@ -20,7 +20,6 @@
                     <add sequence=".htaccess" />
                 </denyUrlSequences>
                 <fileExtensions>
-                    <add fileExtension=".config" allowed="false" />
                     <add fileExtension=".bak" allowed="false" />
                     <add fileExtension=".log" allowed="false" />
                 </fileExtensions>
@@ -29,15 +28,11 @@
         </security>
         <httpProtocol>
             <customHeaders>
-                <remove name="Access-Control-Allow-Origin" />
-                <remove name="Access-Control-Allow-Methods" />
-                <remove name="Access-Control-Allow-Headers" />
-                <remove name="Access-Control-Max-Age" />
+                <clear />
                 <add name="Access-Control-Allow-Origin" value="*" />
                 <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS, HEAD" />
                 <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization, X-Requested-With, Accept, Origin" />
                 <add name="Access-Control-Max-Age" value="86400" />
-                <add name="Access-Control-Allow-Credentials" value="false" />
                 <add name="X-Content-Type-Options" value="nosniff" />
                 <add name="X-Frame-Options" value="SAMEORIGIN" />
                 <add name="X-XSS-Protection" value="1; mode=block" />
@@ -46,19 +41,14 @@
         </httpProtocol>
         <handlers>
             <remove name="OPTIONSVerbHandler" />
-            <remove name="TRACEVerbHandler" />
-            <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" responseBufferLimit="0" />
+            <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" />
         </handlers>
         <defaultDocument>
             <files>
                 <clear />
                 <add value="index.php" />
-                <add value="Default.htm" />
-                <add value="Default.asp" />
-                <add value="index.htm" />
                 <add value="index.html" />
-                <add value="iisstart.htm" />
-                <add value="default.aspx" />
+                <add value="Default.htm" />
             </files>
         </defaultDocument>
         <httpErrors errorMode="Detailed" existingResponse="PassThrough" />
