Update web.config with explicit PHP path C:\PHP\php-cgi.exe

--- a/web.config
+++ b/web.config
@@ -40,7 +40,8 @@
             </customHeaders>
         </httpProtocol>
         <handlers>
-            <remove name="OPTIONSVerbHandler" />
+            <clear />
+            <add name="PHP-CGI" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\PHP\php-cgi.exe" resourceType="Either" requireAccess="Script" />
             <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" />
         </handlers>
         <defaultDocument>
