Fix web.config: Remove locked handlers section, allow OPTIONS verb

--- a/web.config
+++ b/web.config
@@ -11,6 +11,9 @@
         </rewrite>
         <security>
             <requestFiltering>
+                <verbs allowUnlisted="true">
+                    <add verb="OPTIONS" allowed="true" />
+                </verbs>
                 <hiddenSegments>
                     <add segment="config.php" />
                 </hiddenSegments>
@@ -39,11 +42,6 @@
                 <add name="Referrer-Policy" value="strict-origin-when-cross-origin" />
             </customHeaders>
         </httpProtocol>
-        <handlers>
-            <clear />
-            <add name="PHP-CGI" path="*.php" verb="*" modules="FastCgiModule" scriptProcessor="C:\PHP\php-cgi.exe" resourceType="Either" requireAccess="Script" />
-            <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" />
-        </handlers>
         <defaultDocument>
             <files>
                 <clear />
