--- a/web.config
+++ b/web.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
+        <modules>
+            <remove name="WebDAVModule" />
+        </modules>
         <rewrite>
             <rules>
                 <rule name="Online Count">
