feat: Comprehensive CORS configuration for all web servers
- Enable CORS headers in all PHP files (index.php, audio.php, extra.php)
- Add comprehensive CORS support with all HTTP methods (GET, POST, PUT, DELETE, OPTIONS, HEAD)
- Update web.config for IIS with outbound rules to send CORS on error responses
- Add allowDoubleEscaping to prevent Request Filtering from blocking SSO tokens
- Increase query string limits (4096 -> 8192 bytes)
- Update .htaccess with 'always' directive for Apache servers
- Create nginx.conf.example for Nginx server support
- Add CORS_CONFIGURATION.md and TROUBLESHOOTING_403.md documentation

This fixes CORS policy errors and 403 Forbidden responses.

--- a/web.config
+++ b/web.config
@@ -11,11 +11,30 @@
                     <action type="Rewrite" url="onlinecount.php" appendQueryString="false" />
                 </rule>
             </rules>
+            <outboundRules>
+                <rule name="Add CORS Headers">
+                    <match serverVariable="RESPONSE_Access-Control-Allow-Origin" pattern=".*" />
+                    <action type="Rewrite" value="*" />
+                </rule>
+                <rule name="Add CORS Methods">
+                    <match serverVariable="RESPONSE_Access-Control-Allow-Methods" pattern=".*" />
+                    <action type="Rewrite" value="GET, POST, PUT, DELETE, OPTIONS, HEAD" />
+                </rule>
+                <rule name="Add CORS Headers Allowed">
+                    <match serverVariable="RESPONSE_Access-Control-Allow-Headers" pattern=".*" />
+                    <action type="Rewrite" value="Content-Type, Authorization, X-Requested-With, Accept, Origin" />
+                </rule>
+            </outboundRules>
         </rewrite>
         <security>
-            <requestFiltering>
+            <requestFiltering allowDoubleEscaping="true">
                 <verbs allowUnlisted="true">
                     <add verb="OPTIONS" allowed="true" />
+                    <add verb="GET" allowed="true" />
+                    <add verb="POST" allowed="true" />
+                    <add verb="PUT" allowed="true" />
+                    <add verb="DELETE" allowed="true" />
+                    <add verb="HEAD" allowed="true" />
                 </verbs>
                 <hiddenSegments>
                     <add segment="config.php" />
@@ -29,12 +48,11 @@
                     <add fileExtension=".bak" allowed="false" />
                     <add fileExtension=".log" allowed="false" />
                 </fileExtensions>
-                <requestLimits maxQueryString="4096" maxUrl="4096" />
+                <requestLimits maxQueryString="8192" maxUrl="8192" />
             </requestFiltering>
         </security>
         <httpProtocol>
             <customHeaders>
-                <clear />
                 <add name="Access-Control-Allow-Origin" value="*" />
                 <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS, HEAD" />
                 <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization, X-Requested-With, Accept, Origin" />
@@ -45,6 +63,7 @@
                 <add name="Referrer-Policy" value="strict-origin-when-cross-origin" />
             </customHeaders>
         </httpProtocol>
+        <httpErrors errorMode="Detailed" existingResponse="PassThrough" />
         <defaultDocument>
             <files>
                 <clear />
@@ -53,6 +72,5 @@
                 <add value="Default.htm" />
             </files>
         </defaultDocument>
-        <httpErrors errorMode="Detailed" existingResponse="PassThrough" />
     </system.webServer>
 </configuration>
